# PY_2sem_lab2

./: .gitignore  README.md  main.py  pyproject.toml  tasks.json
src/: __init__.py  api_stub.py  file_source.py  generation_source.py  logger.py  models.py  protocol.py
tests/: test_file_source.py  test_generator_source.py  test_main.py  test_models.py
