[project]
name = "work-with-protocol"
version = "0.1.0"
description = "idc"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.4.2",
    "pytest-cov>=4.1",
    "pyfakefs>=6.1.4",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing",
    "-q",
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = ["*/__init__.py",]

[tool.coverage.report]
show_missing = true
fail_under = 80
